y.output
Terminals unused in grammar

    tOR
    tAND
    tVOID


Grammar

    0 $accept: Program $end

    1 Program: Funs

    2 Funs: Fun Funs
    3     | Fun

    4 $@1: ε

    5 Fun: tINT $@1 tID tOP Args tCP Body

    6 Args: tINT tID ArgsM
    7     | ε

    8 ArgsM: tCOMA tINT tID ArgsM
    9      | ε

   10 $@2: ε

   11 $@3: ε

   12 Body: $@2 tOB $@3 Lins tCB

   13 $@4: ε

   14 Lins: $@4 Ins Lins
   15     | ε

   16 Ins: Aff
   17    | If
   18    | While
   19    | Decla

   20 $@5: ε

   21 Aff: $@5 tID tAS E tSEM

   22 $@6: ε

   23 Decla: $@6 tINT Decla1 DeclaS tSEM

   24 Decla1: tID
   25       | tID tAS E

   26 DeclaS: ε
   27       | tCOMA Decla1 DeclaS

   28 $@7: ε

   29 $@8: ε

   30 If: tIF tOP E tCP $@7 Body $@8 Else

   31 $@9: ε

   32 Else: tELSE $@9 Body
   33     | ε

   34 $@10: ε

   35 While: tWHILE tOP E tCP $@10 Body

   36 E: E tPLUS E
   37  | E tMUL E
   38  | E tMINUS E
   39  | E tDIV E
   40  | E tEQ E
   41  | E tSUP E
   42  | E tSUPOREQ E
   43  | E tINF E
   44  | E tINFOREQ E
   45  | tNB
   46  | tID


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    tINT (258) 5 6 8 23
    tOP (259) 5 30 35
    tCP (260) 5 30 35
    tOB (261) 12
    tCB (262) 12
    tAS (263) 21 25
    tSEM (264) 21 23
    tCOMA (265) 8 27
    tPLUS (266) 36
    tMINUS (267) 38
    tDIV (268) 39
    tMUL (269) 37
    tELSE (270) 32
    tOR (271)
    tAND (272)
    tVOID (273)
    tEQ (274) 40
    tINFOREQ (275) 44
    tSUP (276) 41
    tSUPOREQ (277) 42
    tINF (278) 43
    tID <name> (279) 5 6 8 21 24 25 46
    tIF <ligne> (280) 30
    tWHILE <ligne2> (281) 35
    tNB <nb> (282) 45


Nonterminals, with rules where they appear

    $accept (28)
        on left: 0
    Program (29)
        on left: 1
        on right: 0
    Funs (30)
        on left: 2 3
        on right: 1 2
    Fun (31)
        on left: 5
        on right: 2 3
    $@1 (32)
        on left: 4
        on right: 5
    Args (33)
        on left: 6 7
        on right: 5
    ArgsM (34)
        on left: 8 9
        on right: 6 8
    Body (35)
        on left: 12
        on right: 5 30 32 35
    $@2 (36)
        on left: 10
        on right: 12
    $@3 (37)
        on left: 11
        on right: 12
    Lins (38)
        on left: 14 15
        on right: 12 14
    $@4 (39)
        on left: 13
        on right: 14
    Ins (40)
        on left: 16 17 18 19
        on right: 14
    Aff (41)
        on left: 21
        on right: 16
    $@5 (42)
        on left: 20
        on right: 21
    Decla (43)
        on left: 23
        on right: 19
    $@6 (44)
        on left: 22
        on right: 23
    Decla1 (45)
        on left: 24 25
        on right: 23 27
    DeclaS (46)
        on left: 26 27
        on right: 23 27
    If (47)
        on left: 30
        on right: 17
    $@7 (48)
        on left: 28
        on right: 30
    $@8 (49)
        on left: 29
        on right: 30
    Else (50)
        on left: 32 33
        on right: 30
    $@9 (51)
        on left: 31
        on right: 32
    While (52)
        on left: 35
        on right: 18
    $@10 (53)
        on left: 34
        on right: 35
    E (54)
        on left: 36 37 38 39 40 41 42 43 44 45 46
        on right: 21 25 30 35 36 37 38 39 40 41 42 43 44


State 0

    0 $accept: • Program $end

    tINT  shift, and go to state 1

    Program  go to state 2
    Funs     go to state 3
    Fun      go to state 4


State 1

    5 Fun: tINT • $@1 tID tOP Args tCP Body

    $default  reduce using rule 4 ($@1)

    $@1  go to state 5


State 2

    0 $accept: Program • $end

    $end  shift, and go to state 6


State 3

    1 Program: Funs •

    $default  reduce using rule 1 (Program)


State 4

    2 Funs: Fun • Funs
    3     | Fun •

    tINT  shift, and go to state 1

    $default  reduce using rule 3 (Funs)

    Funs  go to state 7
    Fun   go to state 4


State 5

    5 Fun: tINT $@1 • tID tOP Args tCP Body

    tID  shift, and go to state 8


State 6

    0 $accept: Program $end •

    $default  accept


State 7

    2 Funs: Fun Funs •

    $default  reduce using rule 2 (Funs)


State 8

    5 Fun: tINT $@1 tID • tOP Args tCP Body

    tOP  shift, and go to state 9


State 9

    5 Fun: tINT $@1 tID tOP • Args tCP Body

    tINT  shift, and go to state 10

    $default  reduce using rule 7 (Args)

    Args  go to state 11


State 10

    6 Args: tINT • tID ArgsM

    tID  shift, and go to state 12


State 11

    5 Fun: tINT $@1 tID tOP Args • tCP Body

    tCP  shift, and go to state 13


State 12

    6 Args: tINT tID • ArgsM

    tCOMA  shift, and go to state 14

    $default  reduce using rule 9 (ArgsM)

    ArgsM  go to state 15


State 13

    5 Fun: tINT $@1 tID tOP Args tCP • Body

    $default  reduce using rule 10 ($@2)

    Body  go to state 16
    $@2   go to state 17


State 14

    8 ArgsM: tCOMA • tINT tID ArgsM

    tINT  shift, and go to state 18


State 15

    6 Args: tINT tID ArgsM •

    $default  reduce using rule 6 (Args)


State 16

    5 Fun: tINT $@1 tID tOP Args tCP Body •

    $default  reduce using rule 5 (Fun)


State 17

   12 Body: $@2 • tOB $@3 Lins tCB

    tOB  shift, and go to state 19


State 18

    8 ArgsM: tCOMA tINT • tID ArgsM

    tID  shift, and go to state 20


State 19

   12 Body: $@2 tOB • $@3 Lins tCB

    $default  reduce using rule 11 ($@3)

    $@3  go to state 21


State 20

    8 ArgsM: tCOMA tINT tID • ArgsM

    tCOMA  shift, and go to state 14

    $default  reduce using rule 9 (ArgsM)

    ArgsM  go to state 22


State 21

   12 Body: $@2 tOB $@3 • Lins tCB

    tCB       reduce using rule 15 (Lins)
    $default  reduce using rule 13 ($@4)

    Lins  go to state 23
    $@4   go to state 24


State 22

    8 ArgsM: tCOMA tINT tID ArgsM •

    $default  reduce using rule 8 (ArgsM)


State 23

   12 Body: $@2 tOB $@3 Lins • tCB

    tCB  shift, and go to state 25


State 24

   14 Lins: $@4 • Ins Lins

    tIF     shift, and go to state 26
    tWHILE  shift, and go to state 27

    tINT      reduce using rule 22 ($@6)
    $default  reduce using rule 20 ($@5)

    Ins    go to state 28
    Aff    go to state 29
    $@5    go to state 30
    Decla  go to state 31
    $@6    go to state 32
    If     go to state 33
    While  go to state 34


State 25

   12 Body: $@2 tOB $@3 Lins tCB •

    $default  reduce using rule 12 (Body)


State 26

   30 If: tIF • tOP E tCP $@7 Body $@8 Else

    tOP  shift, and go to state 35


State 27

   35 While: tWHILE • tOP E tCP $@10 Body

    tOP  shift, and go to state 36


State 28

   14 Lins: $@4 Ins • Lins

    tCB       reduce using rule 15 (Lins)
    $default  reduce using rule 13 ($@4)

    Lins  go to state 37
    $@4   go to state 24


State 29

   16 Ins: Aff •

    $default  reduce using rule 16 (Ins)


State 30

   21 Aff: $@5 • tID tAS E tSEM

    tID  shift, and go to state 38


State 31

   19 Ins: Decla •

    $default  reduce using rule 19 (Ins)


State 32

   23 Decla: $@6 • tINT Decla1 DeclaS tSEM

    tINT  shift, and go to state 39


State 33

   17 Ins: If •

    $default  reduce using rule 17 (Ins)


State 34

   18 Ins: While •

    $default  reduce using rule 18 (Ins)


State 35

   30 If: tIF tOP • E tCP $@7 Body $@8 Else

    tID  shift, and go to state 40
    tNB  shift, and go to state 41

    E  go to state 42


State 36

   35 While: tWHILE tOP • E tCP $@10 Body

    tID  shift, and go to state 40
    tNB  shift, and go to state 41

    E  go to state 43


State 37

   14 Lins: $@4 Ins Lins •

    $default  reduce using rule 14 (Lins)


State 38

   21 Aff: $@5 tID • tAS E tSEM

    tAS  shift, and go to state 44


State 39

   23 Decla: $@6 tINT • Decla1 DeclaS tSEM

    tID  shift, and go to state 45

    Decla1  go to state 46


State 40

   46 E: tID •

    $default  reduce using rule 46 (E)


State 41

   45 E: tNB •

    $default  reduce using rule 45 (E)


State 42

   30 If: tIF tOP E • tCP $@7 Body $@8 Else
   36 E: E • tPLUS E
   37  | E • tMUL E
   38  | E • tMINUS E
   39  | E • tDIV E
   40  | E • tEQ E
   41  | E • tSUP E
   42  | E • tSUPOREQ E
   43  | E • tINF E
   44  | E • tINFOREQ E

    tCP       shift, and go to state 47
    tPLUS     shift, and go to state 48
    tMINUS    shift, and go to state 49
    tDIV      shift, and go to state 50
    tMUL      shift, and go to state 51
    tEQ       shift, and go to state 52
    tINFOREQ  shift, and go to state 53
    tSUP      shift, and go to state 54
    tSUPOREQ  shift, and go to state 55
    tINF      shift, and go to state 56


State 43

   35 While: tWHILE tOP E • tCP $@10 Body
   36 E: E • tPLUS E
   37  | E • tMUL E
   38  | E • tMINUS E
   39  | E • tDIV E
   40  | E • tEQ E
   41  | E • tSUP E
   42  | E • tSUPOREQ E
   43  | E • tINF E
   44  | E • tINFOREQ E

    tCP       shift, and go to state 57
    tPLUS     shift, and go to state 48
    tMINUS    shift, and go to state 49
    tDIV      shift, and go to state 50
    tMUL      shift, and go to state 51
    tEQ       shift, and go to state 52
    tINFOREQ  shift, and go to state 53
    tSUP      shift, and go to state 54
    tSUPOREQ  shift, and go to state 55
    tINF      shift, and go to state 56


State 44

   21 Aff: $@5 tID tAS • E tSEM

    tID  shift, and go to state 40
    tNB  shift, and go to state 41

    E  go to state 58


State 45

   24 Decla1: tID •
   25       | tID • tAS E

    tAS  shift, and go to state 59

    $default  reduce using rule 24 (Decla1)


State 46

   23 Decla: $@6 tINT Decla1 • DeclaS tSEM

    tCOMA  shift, and go to state 60

    $default  reduce using rule 26 (DeclaS)

    DeclaS  go to state 61


State 47

   30 If: tIF tOP E tCP • $@7 Body $@8 Else

    $default  reduce using rule 28 ($@7)

    $@7  go to state 62


State 48

   36 E: E tPLUS • E

    tID  shift, and go to state 40
    tNB  shift, and go to state 41

    E  go to state 63


State 49

   38 E: E tMINUS • E

    tID  shift, and go to state 40
    tNB  shift, and go to state 41

    E  go to state 64


State 50

   39 E: E tDIV • E

    tID  shift, and go to state 40
    tNB  shift, and go to state 41

    E  go to state 65


State 51

   37 E: E tMUL • E

    tID  shift, and go to state 40
    tNB  shift, and go to state 41

    E  go to state 66


State 52

   40 E: E tEQ • E

    tID  shift, and go to state 40
    tNB  shift, and go to state 41

    E  go to state 67


State 53

   44 E: E tINFOREQ • E

    tID  shift, and go to state 40
    tNB  shift, and go to state 41

    E  go to state 68


State 54

   41 E: E tSUP • E

    tID  shift, and go to state 40
    tNB  shift, and go to state 41

    E  go to state 69


State 55

   42 E: E tSUPOREQ • E

    tID  shift, and go to state 40
    tNB  shift, and go to state 41

    E  go to state 70


State 56

   43 E: E tINF • E

    tID  shift, and go to state 40
    tNB  shift, and go to state 41

    E  go to state 71


State 57

   35 While: tWHILE tOP E tCP • $@10 Body

    $default  reduce using rule 34 ($@10)

    $@10  go to state 72


State 58

   21 Aff: $@5 tID tAS E • tSEM
   36 E: E • tPLUS E
   37  | E • tMUL E
   38  | E • tMINUS E
   39  | E • tDIV E
   40  | E • tEQ E
   41  | E • tSUP E
   42  | E • tSUPOREQ E
   43  | E • tINF E
   44  | E • tINFOREQ E

    tSEM      shift, and go to state 73
    tPLUS     shift, and go to state 48
    tMINUS    shift, and go to state 49
    tDIV      shift, and go to state 50
    tMUL      shift, and go to state 51
    tEQ       shift, and go to state 52
    tINFOREQ  shift, and go to state 53
    tSUP      shift, and go to state 54
    tSUPOREQ  shift, and go to state 55
    tINF      shift, and go to state 56


State 59

   25 Decla1: tID tAS • E

    tID  shift, and go to state 40
    tNB  shift, and go to state 41

    E  go to state 74


State 60

   27 DeclaS: tCOMA • Decla1 DeclaS

    tID  shift, and go to state 45

    Decla1  go to state 75


State 61

   23 Decla: $@6 tINT Decla1 DeclaS • tSEM

    tSEM  shift, and go to state 76


State 62

   30 If: tIF tOP E tCP $@7 • Body $@8 Else

    $default  reduce using rule 10 ($@2)

    Body  go to state 77
    $@2   go to state 17


State 63

   36 E: E • tPLUS E
   36  | E tPLUS E •
   37  | E • tMUL E
   38  | E • tMINUS E
   39  | E • tDIV E
   40  | E • tEQ E
   41  | E • tSUP E
   42  | E • tSUPOREQ E
   43  | E • tINF E
   44  | E • tINFOREQ E

    tDIV  shift, and go to state 50
    tMUL  shift, and go to state 51

    $default  reduce using rule 36 (E)


State 64

   36 E: E • tPLUS E
   37  | E • tMUL E
   38  | E • tMINUS E
   38  | E tMINUS E •
   39  | E • tDIV E
   40  | E • tEQ E
   41  | E • tSUP E
   42  | E • tSUPOREQ E
   43  | E • tINF E
   44  | E • tINFOREQ E

    tDIV  shift, and go to state 50
    tMUL  shift, and go to state 51

    $default  reduce using rule 38 (E)


State 65

   36 E: E • tPLUS E
   37  | E • tMUL E
   38  | E • tMINUS E
   39  | E • tDIV E
   39  | E tDIV E •
   40  | E • tEQ E
   41  | E • tSUP E
   42  | E • tSUPOREQ E
   43  | E • tINF E
   44  | E • tINFOREQ E

    $default  reduce using rule 39 (E)


State 66

   36 E: E • tPLUS E
   37  | E • tMUL E
   37  | E tMUL E •
   38  | E • tMINUS E
   39  | E • tDIV E
   40  | E • tEQ E
   41  | E • tSUP E
   42  | E • tSUPOREQ E
   43  | E • tINF E
   44  | E • tINFOREQ E

    $default  reduce using rule 37 (E)


State 67

   36 E: E • tPLUS E
   37  | E • tMUL E
   38  | E • tMINUS E
   39  | E • tDIV E
   40  | E • tEQ E
   40  | E tEQ E •
   41  | E • tSUP E
   42  | E • tSUPOREQ E
   43  | E • tINF E
   44  | E • tINFOREQ E

    tPLUS     shift, and go to state 48
    tMINUS    shift, and go to state 49
    tDIV      shift, and go to state 50
    tMUL      shift, and go to state 51
    tINFOREQ  shift, and go to state 53
    tSUP      shift, and go to state 54
    tSUPOREQ  shift, and go to state 55
    tINF      shift, and go to state 56

    $default  reduce using rule 40 (E)


State 68

   36 E: E • tPLUS E
   37  | E • tMUL E
   38  | E • tMINUS E
   39  | E • tDIV E
   40  | E • tEQ E
   41  | E • tSUP E
   42  | E • tSUPOREQ E
   43  | E • tINF E
   44  | E • tINFOREQ E
   44  | E tINFOREQ E •

    tPLUS   shift, and go to state 48
    tMINUS  shift, and go to state 49
    tDIV    shift, and go to state 50
    tMUL    shift, and go to state 51

    tINFOREQ  error (nonassociative)
    tSUP      error (nonassociative)
    tSUPOREQ  error (nonassociative)
    tINF      error (nonassociative)

    $default  reduce using rule 44 (E)


State 69

   36 E: E • tPLUS E
   37  | E • tMUL E
   38  | E • tMINUS E
   39  | E • tDIV E
   40  | E • tEQ E
   41  | E • tSUP E
   41  | E tSUP E •
   42  | E • tSUPOREQ E
   43  | E • tINF E
   44  | E • tINFOREQ E

    tPLUS   shift, and go to state 48
    tMINUS  shift, and go to state 49
    tDIV    shift, and go to state 50
    tMUL    shift, and go to state 51

    tINFOREQ  error (nonassociative)
    tSUP      error (nonassociative)
    tSUPOREQ  error (nonassociative)
    tINF      error (nonassociative)

    $default  reduce using rule 41 (E)


State 70

   36 E: E • tPLUS E
   37  | E • tMUL E
   38  | E • tMINUS E
   39  | E • tDIV E
   40  | E • tEQ E
   41  | E • tSUP E
   42  | E • tSUPOREQ E
   42  | E tSUPOREQ E •
   43  | E • tINF E
   44  | E • tINFOREQ E

    tPLUS   shift, and go to state 48
    tMINUS  shift, and go to state 49
    tDIV    shift, and go to state 50
    tMUL    shift, and go to state 51

    tINFOREQ  error (nonassociative)
    tSUP      error (nonassociative)
    tSUPOREQ  error (nonassociative)
    tINF      error (nonassociative)

    $default  reduce using rule 42 (E)


State 71

   36 E: E • tPLUS E
   37  | E • tMUL E
   38  | E • tMINUS E
   39  | E • tDIV E
   40  | E • tEQ E
   41  | E • tSUP E
   42  | E • tSUPOREQ E
   43  | E • tINF E
   43  | E tINF E •
   44  | E • tINFOREQ E

    tPLUS   shift, and go to state 48
    tMINUS  shift, and go to state 49
    tDIV    shift, and go to state 50
    tMUL    shift, and go to state 51

    tINFOREQ  error (nonassociative)
    tSUP      error (nonassociative)
    tSUPOREQ  error (nonassociative)
    tINF      error (nonassociative)

    $default  reduce using rule 43 (E)


State 72

   35 While: tWHILE tOP E tCP $@10 • Body

    $default  reduce using rule 10 ($@2)

    Body  go to state 78
    $@2   go to state 17


State 73

   21 Aff: $@5 tID tAS E tSEM •

    $default  reduce using rule 21 (Aff)


State 74

   25 Decla1: tID tAS E •
   36 E: E • tPLUS E
   37  | E • tMUL E
   38  | E • tMINUS E
   39  | E • tDIV E
   40  | E • tEQ E
   41  | E • tSUP E
   42  | E • tSUPOREQ E
   43  | E • tINF E
   44  | E • tINFOREQ E

    tPLUS     shift, and go to state 48
    tMINUS    shift, and go to state 49
    tDIV      shift, and go to state 50
    tMUL      shift, and go to state 51
    tEQ       shift, and go to state 52
    tINFOREQ  shift, and go to state 53
    tSUP      shift, and go to state 54
    tSUPOREQ  shift, and go to state 55
    tINF      shift, and go to state 56

    $default  reduce using rule 25 (Decla1)


State 75

   27 DeclaS: tCOMA Decla1 • DeclaS

    tCOMA  shift, and go to state 60

    $default  reduce using rule 26 (DeclaS)

    DeclaS  go to state 79


State 76

   23 Decla: $@6 tINT Decla1 DeclaS tSEM •

    $default  reduce using rule 23 (Decla)


State 77

   30 If: tIF tOP E tCP $@7 Body • $@8 Else

    $default  reduce using rule 29 ($@8)

    $@8  go to state 80


State 78

   35 While: tWHILE tOP E tCP $@10 Body •

    $default  reduce using rule 35 (While)


State 79

   27 DeclaS: tCOMA Decla1 DeclaS •

    $default  reduce using rule 27 (DeclaS)


State 80

   30 If: tIF tOP E tCP $@7 Body $@8 • Else

    tELSE  shift, and go to state 81

    $default  reduce using rule 33 (Else)

    Else  go to state 82


State 81

   32 Else: tELSE • $@9 Body

    $default  reduce using rule 31 ($@9)

    $@9  go to state 83


State 82

   30 If: tIF tOP E tCP $@7 Body $@8 Else •

    $default  reduce using rule 30 (If)


State 83

   32 Else: tELSE $@9 • Body

    $default  reduce using rule 10 ($@2)

    Body  go to state 84
    $@2   go to state 17


State 84

   32 Else: tELSE $@9 Body •

    $default  reduce using rule 32 (Else)
